<resources>
    <string name="app_name">iFocus Mission</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="events_update">The moment conversation started, Prasad gaaru emphasized on the value and purpose of life. “Do not follow things blindly,  just stop, think and move forward”- great line quoted by Prasad gaaru.  He personally believes that association with a mission like iFOCUS is very crucial in our life because it shows the right path at the right moment heading to the right destination.</string>
    <string name="event_updates2">With the prevailing crowd in front of Raogaru, he started off explaining how India had been through, since 1975. He elucidated us speaking about the changes in Indian politics, the military discipline and dedication towards country. “Nation develops not by communism, capitalism, socialism but only by NATIONALISM”- inspiring words by Raogaaru.</string>
    <string name="key_app_version_number">app_version_number</string>
    <string name="project_id">868676881324</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="key_registration_id">registration_id</string>
     <string name="enq_qery">All Queries will be Addressed in 24 hours\n
         Contact: 8008644333</string>
    <string name="about"><b><c>About iFocus</c></b></string>
    <string name="pledge"><b>Pledge Declaration</b></string>
    <string name="structure"><b>Our Structure</b></string>
    <string name="sanjiwani"><b>Sanjiwani Club</b></string>
    <string name="faqss"> <b>FAQs</b></string>
    <string name="contact"><b>Contact</b></string>
    <string name="enquiry"><b>Send Enquiry</b></string>
      <string name="contact_info"><font size="24"><b>I Focus Mission</b></font>\n\n
          2-2-186/18/6,\n
          RK Nagar,\n
          Bagh Amberpet,\n
          Hyderabad,\n
          Pho:8008644333, 8008744333,\n
          040 27424333\n
          E-Mail: info@ifocusmission.org\n
          www.ifocusmission.org\n
          
          
          </string>
       <string name="abt_ifocus">  <b><p>About iFocus:</p></b>\n\n
<p>An endeavour to create a platform for Passionate Careers &amp; Positive Lifestyles  has been progressing steadily since the last ten years and impacting the society in a constructive manner.</p>\n\n
<p>I Focus Mission was established by ardent followers of Sadguru Sivananda Murthy garu to take forward the ideology of Samardhata, Samagratha and Bhaarateeyata, by bringing people together for building passionate careers and positive lifestyles for oneself and to ultimately contribute towards nation building.</p>\n\n
<p>Thousands of mission members form part of this physical network to coordinate in an atmosphere of mutual learning , serving and observing to explore oneself and fulfil objectives.</p>\n\n

<b>Our Mission </b>\n\n
<p><b>i Focus Mission </b> is driven by contemporary professionals and led by eminent scholars, it focuses on bringing out the inherent positive qualities and promotes the culture of enriching one’s wisdom.
The mission endeavours to create a platform of effective living for the individuals of all ages, at all stages. Initiatives are underway to create professional, social and cultural consciousness. Established with the core objective of enhancing learning and practicing leadership, the mission intends to help people seamlessly manage today’s world of complexities, conflicts and contradictions</p>\n\n.
           
       </string>
       <string name="mission_vission">
                 <font size="18"><b> Welcome</b>\n\n</font>
                   <font size="18"><b>  To </b>\n\n </font>
                  <font size="18"><b>  I-Focus Mission </b>\n\n </font>
      <font size="18"> <b> The world of fundamental leadership.</b>\n\n  </font>
                 <b>         I-Focus…!    </b> \n\n
                 
                <p>  A mission that brought a lively change in thousands of positive lives…</p>\n\n
              <p>    A mission that blossomed thousands of passionate careers…</p>\n\n
<p>A civilian army of committed people who are career focused yet social conscious….</p>\n\n
<p>A platform where youngsters sharpen aptitudes and premiers   Fine-tune their attitudes...</p>\n\n
<p>A forum where professionals learn Mantras of Management</p>\n\n
<p>And entrepreneurs practice Tantras of achievements...</p>\n\n
<p>A stage where our little- guns ignites latent Talents and seniors mentor their juniors…</p>\n\n
<p>All in all a positive sensation</p>\n\n
<p> That is all about a synergistic spectrum of bountiful</p>\n\n
<p>Passionate Careers ~ Positive Life Styles.</p>\n\n\n
<p>Head quartered @ Hyderabad, I-Focus Mission functions on the trivet of 
‘Samardhatha’- competency |’Samagratha’ - Integrity | ‘Bharatheeyatha’ - Indianity.</p>\n\n
<p>Here, our spirited objective is to initiate a young patriotic world of bright careers and happy life-</p>\n\n
                  </string>
       <string name="mission"><font size="20"><p> <b> Mission: </b></p></font>\n\n<p><b>i Focus Mission </b> is driven by contemporary professionals and led by eminent scholars, it focuses on bringing out the inherent positive qualities and promotes the culture of enriching one’s wisdom.</p>
<p>The mission endeavours to create a platform of effective living for the individuals of all ages, at all stages. Initiatives are underway to create professional, social and cultural consciousness. Established with the core objective of enhancing learning and practicing leadership, the mission intends to help people seamlessly manage today’s world of complexities, conflicts and contradictions</p>
</string>
       <string name="home_txt"><p>iFocus 11 Days Fundamental</p>\n
           <p>Leadership batch starts every thursday </p>\n
           <p>at 6:30pm - 8:30pm.</p>
            </string>
       <string name="stru_staic"><p>Senior most IAS,IPS Officers Eminent Scholars,</p>
           
       <p>Serial Entrepreneurs,CXOs,Politicians,among others</p>\n <p>are part of Guiding Council.</p>
       </string>
</resources>