<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_us_blue"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_pledge"
            android:icon="@drawable/pledge_blue"
            android:title="@string/pledge" />
        <item
            android:id="@+id/nav_structure"
            android:icon="@drawable/our_structure_blue"
            android:title="@string/structure" />
        <item
            android:id="@+id/nav_sanjiwani"
            android:icon="@drawable/s_club_blue"
            android:title="@string/sanjiwani" />
        <item
            android:id="@+id/nav_FAQs"
            android:icon="@drawable/faq_blue"
            android:title="@string/faqss" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/conatct_blue"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_sendEnquiry"
            android:icon="@drawable/enquiry_blule"
            android:title="@string/enquiry" />
    </group>

</menu>
